--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/pmsorion/CursoNodeJS/issues"
   },
-  "homepage": "https://github.com/pmsorion/CursoNodeJS#readme"
+  "homepage": "https://github.com/pmsorion/CursoNodeJS#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
